<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="279dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_grid"
        android:layout_width="470dp"
        android:layout_height="575dp"
        android:alpha="0.8"
        android:contentDescription="@string/Grid"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:srcCompat="@drawable/grid" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="457dp"
        android:layout_height="449dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_grid"
        app:layout_constraintVertical_bias="0.487">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img1"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="0" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img2"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="1" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img3"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img4"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="3" />

            <ImageView
                android:id="@+id/img5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img5"
                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="4" />

            <ImageView
                android:id="@+id/img6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img6"

                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img7"

                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="6" />

            <ImageView
                android:id="@+id/img8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img8"

                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="7" />

            <ImageView
                android:id="@+id/img9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/img9"

                android:onClick="playerTap"
                android:padding="20dp"
                android:tag="8" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="256dp"
        android:layout_height="85dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="serif"
        android:letterSpacing="0.1"
        android:text="@string/playerTurn"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>